#cargo-features = ["edition"]

[package]
name = "msiproxy"
version = "0.1.0"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]
#edition = "2018"

[dependencies]
bytes = "0.4.7"
futures = "0.1.23"
http = "0.1.7"
hyper = "0.12.9"
log = "0.4.1"
tokio = "0.1.7"
#tokio-fs = "0.1.2"
tokio-io = "0.1.7"
url = "1.7.1"
#futures-core-preview = { version = "0.3.0-alpha.3" }
#futures-util-preview = { version = "0.3.0-alpha.3" }
#tokio-async-await = { version = "0.1.1" }

# Parsing params
atoi = "0.2.3"
chrono = "0.4.4"

# Serializing responses, deserializing requests
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
serde_plain = "0.3.0"
serde_urlencoded = "0.5.1"

[dev-dependencies]
env_logger = "0.5.12"
bytes = "0.4.9"
